# salvation

./: Cargo.toml  README.md  add.metal  example.slvt  matters.txt  record.txt
assets/: triangle.mov
examples/: test1.slvt  test2.slvt  test3.slvt  test4.slvt
salvation-core/: Cargo.toml
salvation-core/src/: ctxs.rs  lib.rs
salvation-core/src/backends/: mod.rs
salvation-core/src/cli/: mod.rs
salvation-core/src/compiler/: backend_resolver.rs  codegen.rs  mod.rs  parser.rs
salvation-core/src/compiler/ast/: ast_testing.rs  mod.rs  spaces.rs  types.rs
salvation-core/src/compiler/checker/: mod.rs
salvation-core/src/compiler/lexer/: mod.rs  tokens.rs
salvation-core/src/compiler/parser/: mod.rs  parser_testing.rs
salvation-core/src/runtime/: mod.rs
salvation-cuda/: Cargo.toml
salvation-cuda/src/: checker.rs  codegen.rs  host_gen.rs  runtime.rs
salvation-metal/: Cargo.toml  build.rs
salvation-metal/src/: host_gen.rs  lib.rs
salvation-metal/src/checker/: borrow_check.rs  data_race_check.rs  memory_check.rs  mod.rs  type_check.rs  word_check.rs
salvation-metal/src/codegen/: mod.rs
salvation-metal/src/compiler/: parser.rs
salvation-metal/src/compiler/ast/: mod.rs  types.rs
salvation-metal/src/compiler/checker/: mod.rs
salvation-metal/src/compiler/lexer/: mod.rs
salvation-metal/src/ffi/: cache.txt  ffi_manager.h  ffi_manager.m  ffi_manager.mm  metal_info.m  mod.rs
salvation-metal/src/runtime/: mod.rs
salvation-rocm/: Cargo.toml
salvation-rocm/src/: checker.rs  codegen.rs  host_gen.rs  runtime.rs
salvation-vulkan/: Cargo.toml
salvation-vulkan/src/: checker.rs  codegen.rs  host_gen.rs  lib.rs  runtime.rs
salvation-zed-extension/: Cargo.toml
src/: lib.rs  main.rs
src/backend/: detect.rs  mod.rs  types.rs
src/cli/: mod.rs
src/compiler/: cache.rs  mod.rs  parser.rs
src/compiler/ast/: mod.rs
src/compiler/checker/: mod.rs
src/metal/: codegen.rs  lexer.rs  mod.rs  module.rs  parser.rs  typeck.rs
tests/test_1/: add.slvt  bad.slvt  bad_barrier.slvt  bad_immutable.slvt
tests/test_2/: struct_test.metal  struct_test.slvt
tests/test_3/: main.slvt  threadgroup_local.metal  threadgroup_local.slvt  transform.metal  transform.slvt
