[package]
name = "salvation"
version = "0.1.0"
edition = "2024"

[workspace.package]
edition = "2024"
authors = ["dentimoer-official <dentimoer@icloud.com>"]

[workspace]
members = ["salvation-core",
    "salvation-metal",
    "salvation-rocm",
    "salvation-vulkan",
    "salvation-zed-extension"
]

[workspace.dependencies]
thiserror = "1.0"
anyhow  = "1.0"
serde   = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
salvation-core = { path = "./salvation-core" }
salvation-metal = { path = "./salvation-metal" }
salvation-vulkan = { path = "./salvation-vulkan" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
which = "6.0"
