[workspace.package]
edition = "2024"
authors = ["dentimoer-official <dentimoer@icloud.com>"]

[workspace]
members = [
    "salvation-core", 
    "salvation-cuda",
    "salvation-metal",
    "salvation-rocm",
    "salvation-vulkan",
    "salvation-zed-extension"
]

[workspace.dependencies]
thiserror = "1.0"
anyhow  = "1.0"
serde   = { version = "1", features = ["derive"] }
serde_json = "1"

[package]
name = "salvation"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
which = "6.0"

salvation-core = { path = "./salvation-core" }
salvation-cuda = { path = "./salvation-cuda"}
salvation-metal = { path = "./salvation-metal" }
salvation-rocm = { path = "./salvation-rocm" }
salvation-vulkan = { path = "./salvation-vulkan" }
