[package]
name = "salvation-metal"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
libc = "0.2.183"

salvation-core = { path = "../salvation-core" }

[build-dependencies]
cc = "1.0"
bindgen = "0.69.4"
entry = "0.2.1"
glob = "0.3"
