[package]
name = "salvation-zed-extension"
version = "0.1.0"
edition.workspace = true
schema_version = 1
authors.workspace = true
description = "Salvation Zed Extension"
repository = "https://github.com/dentimoer-official/salvation/salvation-zed-extension"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.7.0"
